--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,8 @@
 FROM ubuntu:latest
 
 RUN apt-get update && \
-    apt-get install -y
-    python3.12 \
+    apt-get install -y \
+    python3.12.4\
     python3-pip \
     git
 
