--- a/DockerFile
+++ b/DockerFile
@@ -6,7 +6,7 @@ RUN apt-get update && \
     python3-pip \
     git
 
-RUN pip3 install pyYAML
+RUN -H pip3 install pyYAML
 
 COPY feed.py /usr/bin/feed.py
 
