--- a/DockerFile
+++ b/DockerFile
@@ -1,12 +1,12 @@
 FROM ubuntu:latest
 
 RUN apt-get update && \
-    apt-get install -y \
+    apt-get install -y curl\
     python3.10\
     python3-pip \
     git
 
-RUN pip3 reinstall pyYAML
+RUN --force-reinstall pip3 pyYAML
 
 COPY feed.py /usr/bin/feed.py
 
